feat(post-filters): Hide and show in mobile

--- a/src/app/pages/posts/components/post-card/post-card.component.html
+++ b/src/app/pages/posts/components/post-card/post-card.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!loading && post" class="card flex-col flex-between gap-05 w-100">
-  <div class="flex-col gap-05">
+  <div class="flex-col">
     <div class="flex-between-center">
       <p class="ft-label">{{ post.user.fullName ?? post.user.email }} - {{ post.createdAt|timeAgo }}</p>
   
