--- a/src/assets/styles/_display.scss
+++ b/src/assets/styles/_display.scss
@@ -61,6 +61,10 @@
         align-items: center;
         justify-content: center;
     }
+
+    .lg-flex-row {
+        flex-direction: row;
+    }
 }
 
 // Gap
