--- a/src/assets/styles/_box-model.scss
+++ b/src/assets/styles/_box-model.scss
@@ -20,6 +20,12 @@
     margin-block: .5rem;
 }
 
+@media (min-width: 64rem) {
+    .lg-m-b-1 {
+        margin-bottom: 1rem;
+    }
+}
+
 // Width
 .w-fit-content {
     width: fit-content;
