--- a/src/assets/styles/components/_tags.scss
+++ b/src/assets/styles/components/_tags.scss
@@ -2,6 +2,7 @@
 .rounded-tag--slime {
     text-decoration: none;
     border-radius: 100em;
+    border: none;
     padding: .5em 1em;
     display: flex;
     align-items: center;
