refactor(posts-list): Don't use js for responsive styles

--- a/src/app/pages/posts/pages/posts-list/posts-list.component.html
+++ b/src/app/pages/posts/pages/posts-list/posts-list.component.html
@@ -5,25 +5,21 @@
         (filtersChange)="changeFilters($event)"
     ></app-posts-filters>
     
-    <section>
+    <section class="w-100">
         <div
-            class="gap-1 flex-wrap lg-m-b-1"
-            [ngClass]="{
-                'flex-between-center flex-row-reverse': (mobile$|async)===false,
-                'flex-col flex-center-end': mobile$|async
-            }">
+            class="gap-1 flex-wrap flex-col flex-center-end lg-flex-row lg-flex-between-center">
+            <app-post-filter-tags
+                [filters]="optionsLoading ? undefined : filters"
+                (filtersChange)="changeFilters($event)"
+            ></app-post-filter-tags>
             <app-paginated-filter-status
                 [pageResults]="posts"
                 [filters]="filters"
                 [loading]="loading"
                 (changePage)="changePage($event)">
             </app-paginated-filter-status>
-            <app-post-filter-tags
-                [filters]="optionsLoading ? undefined : filters"
-                (filtersChange)="changeFilters($event)"
-            ></app-post-filter-tags>
         </div>
-        <ul class="ul-style-none posts-grid gap-05">
+        <ul class="ul-style-none posts-grid gap-05 m-t-1">
             <li *ngFor="let post of posts?.results">
                 <app-post-card
                     [post]="post"
