--- a/src/assets/styles/_display.scss
+++ b/src/assets/styles/_display.scss
@@ -65,6 +65,11 @@
     .lg-flex-row {
         flex-direction: row;
     }
+
+    .lg-flex-between-center {
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 // Gap
