feat(post-list): Add shimmers

--- a/src/app/pages/posts/components/post-card-shimmer/post-card-shimmer.component.html
+++ b/src/app/pages/posts/components/post-card-shimmer/post-card-shimmer.component.html
@@ -1,45 +1,47 @@
-<div class="rounded-card flex-column flex-space_between gap-07">
-  <div class="flex-space_between-center">
-    <div class="shimmer-text-regular grow-1"></div>
-    <mat-icon class="shimmer-text-color">more_vert</mat-icon>
+<div class="card flex-col flex-between gap-05 w-100">
+  <div class="flex-col gap-05">
+    <div class="flex-between-center w-100">
+      <div class="shimmer-ft-label w-100"></div>
+      <button class="small-icon-button" mat-icon-button disabled><i-tabler name="dots-vertical"></i-tabler></button>
+    </div>
+  
+    <div class="shimmer-ft-title"></div>
+    <div class="shimmer-ft-body"></div>
+    <div class="shimmer-ft-body w-80"></div>
   </div>
 
-  <div>
-    <div class="shimmer-text-large"></div>
-    <div class="shimmer-text-regular"></div>
-    <div class="shimmer-text-regular w-40"></div>
-  </div>
-
-  <div class="flex-space_between-center">
-    <div class="flex-start-center gap-025 w-50">
-      <mat-icon class="shimmer-text-color">description</mat-icon>
-      <div class="shimmer-text-regular grow-1"></div>
+  <div class="flex-between-center gap-1">
+    <div class="ft-body flex-start-center gap-05 w-100">
+      <i-tabler name="file-description" class="small-icon txt-shimmer"></i-tabler>
+      <div class="shimmer-ft-label w-50"></div>
     </div>
 
-    <div class="flex-end-center gap-025 w-50">
-      <div class="shimmer-text-regular w-20"></div>
-      <div class="shimmer-text-regular w-20"></div>
+    <div class="flex ft-label gap-05 w-50">
+      <div class="shimmer-ft-label w-100"></div>
+      <div class="shimmer-ft-label w-100"></div>
     </div>
   </div>
 
-  <div class="flex-space_between-center gap-025 w-100">
-    <div class="shimmer-text-large w-30"></div>
-    <div class="shimmer-text-large w-30"></div>
-    <div class="shimmer-text-large w-30"></div>
+  <div class="ft-label flex-center-center gap-05">
+    <div class="shimmer-ft-body w-100"></div>
+    <div class="shimmer-ft-body w-100"></div>
+    <div class="shimmer-ft-body w-100"></div>
   </div>
 
-  <div class="flex-space_between-center gap-1">
-    <div class="flex-center-center gap-1 grow-1">
-      <div class="flex-center-center gap-025 w-100">
-        <mat-icon class="small-icon shimmer-text-color">favorite_outline</mat-icon>
-        <div class="shimmer-text-regular grow-1"></div>
+  <div class="ft-label flex-between-center f-weight-500">
+    <div class="flex-wrap gap-05 w-100">
+      <div class="flex-center-center gap-025 w-40">
+        <i-tabler name="heart" class="small-icon txt-shimmer"></i-tabler>
+        <div class="shimmer-ft-label w-100"></div>
       </div>
-      <div class="flex-center-center gap-025 w-100">
-        <mat-icon class="small-icon shimmer-text-color">visibility</mat-icon>
-        <div class="shimmer-text-regular grow-1"></div>
+      <div class="flex-center-center gap-025 w-40">
+        <i-tabler name="eye" class="small-icon txt-shimmer"></i-tabler>
+        <div class="shimmer-ft-label w-100"></div>
       </div>
     </div>
 
-    <mat-icon class="shimmer-text-color">favorite</mat-icon>
+    <button mat-icon-button disabled class="w-100">
+      <i-tabler name="heart"></i-tabler>
+    </button>
   </div>
 </div>
