--- a/src/app/pages/posts/components/post-card/post-card.component.html
+++ b/src/app/pages/posts/components/post-card/post-card.component.html
@@ -29,7 +29,7 @@
   <div class="flex-between-center">
     <div class="ft-body flex-center-center gap-05">
       <i-tabler name="file-description" class="small-icon"></i-tabler>
-      <span>{{ post.totalFiles }} Documentos</span>
+      <span class="ft-label">{{ post.totalFiles }} Documentos</span>
     </div>
 
     <div class="flex ft-label gap-05">
@@ -63,5 +63,3 @@
     </button>
   </div>
 </div>
-
-<p *ngIf="loading">Loading...</p>
