--- a/src/assets/styles/_box-model.scss
+++ b/src/assets/styles/_box-model.scss
@@ -16,6 +16,10 @@
     margin-top: 1rem;
 }
 
+.m-t-05 {
+    margin-top: .5rem;
+}
+
 .m-y-05 {
     margin-block: .5rem;
 }
@@ -33,6 +37,18 @@
 
 .w-100 {
     width: 100%;
+}
+
+.w-80 {
+    width: 80%;
+}
+
+.w-50 {
+    width: 50%;
+}
+
+.w-40 {
+    width: 40%;
 }
 
 // Height
